--- a/index.html
+++ b/index.html
@@ -22,19 +22,85 @@
   <body>
     <header>
       <div class="header-content">
-        <h1>IMAGINE UM LUGAR...</h1>
+        <h1>
+          IMAGINE UM <br />
+          LUGAR...
+        </h1>
         <p>
           …onde você possa pertencer a um clube escolar, um grupo de gamers, ou
           uma comunidade artística mundial. Onde você e alguns amigos possam
           passar um tempo juntos. Um lugar que torna fácil conversar todos os
           dias e socializar com mais frequência.
         </p>
-        <button class="btn-download">Baixar para Windows</button>
-        <button class="btn-browser">Abra o Discord no seu navegador</button>
+        <div class="header-buttons">
+          <button class="btn-download">Baixar para Windows</button>
+          <button class="btn-browser">Abra o Discord no seu navegador</button>
+        </div>
       </div>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <div class="main-content">
+        <section class="primeira">
+          <img src="assets/Section Image 1.png" alt="imagem crie espaços" />
+          <div>
+            <h2>
+              Crie um espaço controlado por convite onde você se sinta em casa
+            </h2>
+            <p>
+              Os servidores Discord são organizados em canais com assuntos para
+              vocês colaborarem, compartilharem ou simplesmente falarem do dia
+              sem entupir um chat geral.
+            </p>
+          </div>
+        </section>
+        <section class="segunda">
+          <img
+            src="assets/Section Image 2.png"
+            alt="imagem aqui é fácil se encontrar"
+          />
+          <div>
+            <h2>Aqui é fácil se encontrar</h2>
+            <p>
+              Entre no canal de voz quando estiver à toa. Amigos no mesmo
+              servidor podem te ver e entrar imediatamente, sem nem ter que
+              fazer a chamada.
+            </p>
+          </div>
+        </section>
+        <section class="terceira">
+          <img
+            src="assets/Section Image 3.png"
+            alt="imagem Para poucos e para muitos"
+          />
+          <div>
+            <h2>Para poucos e para muitos</h2>
+            <p>
+              Organize qualquer comunidade com ferramentas de moderação e acesso
+              personalizado a membros. Dê poderes especiais aos membros, monte
+              canais privados e muito mais.
+            </p>
+          </div>
+        </section>
+        <section class="ultima">
+          <div>
+            <h2>TECNOLOGIA DE CONEXÃO CONFIÁVEL</h2>
+            <p>
+              Voz e vídeo de baixa latência, para você conversar como se
+              estivesse na mesma sala. Dê um joinha por vídeo, veja amigos
+              transmitirem a jogatina do dia ou junte uma galera pra desenhar na
+              tela compartilhada.
+            </p>
+          </div>
+          <img
+            src="assets/Section Image 4.png"
+            alt="imagem Para poucos e para muitos"
+          />
+        </section>
+      </div>
+    </main>
+    <footer>
+      <img src="assets/logo.png" alt="logo" />
+    </footer>
     <script src="js/main.js"></script>
   </body>
 </html>
